New cartoon: github users

--- a/comics/180/index.html
+++ b/comics/180/index.html
@@ -96,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -146,6 +146,7 @@
         <img src="/comics/180/180-github-users-3.webp" alt="" width="350" />
         <img src="/comics/180/180-github-users-4.webp" alt="" width="350" />
         <img src="/comics/180/180-github-users-5.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-6.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
