--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Standing Desk</h1>
+      <h1>Types of GitHub Users</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/178" rel="prev">
+        <a href="/comics/179" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/25">
+        <a class="random-post" href="/comics/118">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -139,13 +139,14 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon with several cartoons showing a character working at a work station with the desk down, then up, then down, then up, then down... and at the end of the day the character looks sad saying 'I was so busy going up and down that I forgot to work!'">
-        <img src="/comics/179/179-standing-desk-0.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-1.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-2.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-3.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-4.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-5.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="illustration mimicking the GitHub contribution diagram for different types of people: regular developer (different sharesgreen in different locations), the overachiever (everything in dark green), the 'I am looking for a new job' (no contributions until suddenly a big one), the Macarena (the graphic looks like a cartoon dancing in different poses)">
+        <img src="/comics/180/180-github-users-0.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-1.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-2.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-3.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-4.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-5.webp" alt="" width="350" />
+        <img src="/comics/180/180-github-users-6.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -155,13 +156,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/178" rel="prev">
+        <a href="/comics/179" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/149">
+        <a class="random-post" href="/comics/145">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -183,9 +184,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/179">https://comicss.art/comics/179</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/179/standing-desk.png">https://comicss.art/comics/179/standing-desk.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/179/standing-desk.html" rel="alternate">https://comicss.art/comics/179/standing-desk.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/180">https://comicss.art/comics/180</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/180/github-users.png">https://comicss.art/comics/180/github-users.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/180/github-users.html" rel="alternate">https://comicss.art/comics/180/github-users.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -224,7 +225,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-04-08"></script>
+    <script src="/js/data.js?last-updated=2025-04-09"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
