--- a/comics/182/index.html
+++ b/comics/182/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #181: Unattended Children</title>
+    <title>comiCSS #182: Hi, I'm CSS...</title>
 
-    <meta property="og:title" content="comiCSS #181: Unattended Children" />
+    <meta property="og:title" content="comiCSS #182: Hi, I'm CSS..." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/181" />
-    <meta property="og:image" content="https://comicss.art/comics/181/thumb.png" />
-    <meta property="og:description" content="cartoon of a sign with a child drinking coffee and the text 'unattended children will be given an espresso and a class in CSS'" />
+    <meta property="og:url" content="https://comicss.art/comics/182" />
+    <meta property="og:image" content="https://comicss.art/comics/182/thumb.png" />
+    <meta property="og:description" content="comic with three panels showing the new CSS logo (a purple square with the letters CSS inside) with a face saying 'Hi, my name is CSS, but when people see me, they call me FUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUC'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/181">
-    <meta name="twitter:title" content="comiCSS #181: Unattended Children">
-    <meta name="twitter:description" content="cartoon of a sign with a child drinking coffee and the text 'unattended children will be given an espresso and a class in CSS'">
-    <meta name="twitter:image" content="https://comicss.art/comics/181/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/182">
+    <meta name="twitter:title" content="comiCSS #182: Hi, I'm CSS...">
+    <meta name="twitter:description" content="comic with three panels showing the new CSS logo (a purple square with the letters CSS inside) with a face saying 'Hi, my name is CSS, but when people see me, they call me FUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUC'">
+    <meta name="twitter:image" content="https://comicss.art/comics/182/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/181" />
+    <link rel="canonical" href="https://comicss.art/comics/182" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Unattended Children</h1>
+      <h1>Hi, I'm CSS...</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/180" rel="prev">
+        <a href="/comics/181" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/181">
+        <a class="random-post" href="/comics/148">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/182" rel="next">
+        <a href="/comics/183" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,10 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="cartoon of a sign with a child drinking coffee and the text 'unattended children will be given an espresso and a class in CSS'">
-        <img src="/comics/181/181-unattended-children-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="horizontal" aria-label="comic with three panels showing the new CSS logo (a purple square with the letters CSS inside) with a face saying 'Hi, my name is CSS, but when people see me, they call me FUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUC'">
+        <img src="/comics/182/182-hi-im-css-0.webp" alt="" width="350" />
+        <img src="/comics/182/182-hi-im-css-1.webp" alt="" width="350" />
+        <img src="/comics/182/182-hi-im-css-2.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +152,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/180" rel="prev">
+        <a href="/comics/181" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/16">
+        <a class="random-post" href="/comics/59">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +166,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/182" rel="next">
+        <a href="/comics/183" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +180,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/181">https://comicss.art/comics/181</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/181/unattended-children.png">https://comicss.art/comics/181/unattended-children.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/181/unattended-children.html" rel="alternate">https://comicss.art/comics/181/unattended-children.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/182">https://comicss.art/comics/182</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/182/hi-im-css.png">https://comicss.art/comics/182/hi-im-css.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/182/hi-im-css.html" rel="alternate">https://comicss.art/comics/182/hi-im-css.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +220,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 181;</script>
+    <script>let postId = 182;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
