--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Unattended Children</h1>
+      <h1>Hi, I'm CSS...</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/180" rel="prev">
+        <a href="/comics/181" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/181">
+        <a class="random-post" href="/comics/148">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -139,9 +139,12 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon of a sign with a child drinking coffee and the text 'unattended children will be given an espresso and a class in CSS'">
-        <img src="/comics/181/181-unattended-children-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="horizontal" role="img" aria-label="comic with three panels showing the new CSS logo (a purple square with the letters CSS inside) with a face saying 'Hi, my name is CSS, but when people see me, they call me FUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUC'">
+        <img src="/comics/182/182-hi-im-css-0.webp" alt="" width="350" />
+        <img src="/comics/182/182-hi-im-css-1.webp" alt="" width="350" />
+        <img src="/comics/182/182-hi-im-css-2.webp" alt="" width="350" />
       </div>
+      
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -150,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/180" rel="prev">
+        <a href="/comics/181" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/16">
+        <a class="random-post" href="/comics/59">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/181">https://comicss.art/comics/181</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/181/unattended-children.png">https://comicss.art/comics/181/unattended-children.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/181/unattended-children.html" rel="alternate">https://comicss.art/comics/181/unattended-children.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/182">https://comicss.art/comics/182</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/182/hi-im-css.png">https://comicss.art/comics/182/hi-im-css.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/182/hi-im-css.html" rel="alternate">https://comicss.art/comics/182/hi-im-css.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +222,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-04-19"></script>
+    <script src="/js/data.js?last-updated=2025-04-21"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
