new cartoon: everything is cascading

--- a/comics/184/index.html
+++ b/comics/184/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #184: Everything is Cascading</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #184: Everything is Cascading" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/184" />
+    <meta property="og:image" content="https://comicss.art/comics/184/thumb.png" />
+    <meta property="og:description" content="parody of the book cover for Everything is Tuberculosis by John Green: a yellow background with the tile (Everything is Cascading) and the author (Al Montoro) in big laters, a subtitle below the author (Not a bestselling author of the comiCSS series). The center of the drawing looks like a microscope preview with the text The History and Persistence of the Most Hated Language" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/184">
+    <meta name="twitter:title" content="comiCSS #184: Everything is Cascading">
+    <meta name="twitter:description" content="parody of the book cover for Everything is Tuberculosis by John Green: a yellow background with the tile (Everything is Cascading) and the author (Al Montoro) in big laters, a subtitle below the author (Not a bestselling author of the comiCSS series). The center of the drawing looks like a microscope preview with the text The History and Persistence of the Most Hated Language">
+    <meta name="twitter:image" content="https://comicss.art/comics/184/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/184" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/185" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="parody of the book cover for Everything is Tuberculosis by John Green: a yellow background with the tile (Everything is Cascading) and the author (Al Montoro) in big laters, a subtitle below the author (Not a bestselling author of the comiCSS series). The center of the drawing looks like a microscope preview with the text The History and Persistence of the Most Hated Language">
+      <div id="comic-strip" role="img" class="vertical" aria-label="parody of the book cover for Everything is Tuberculosis by John Green: a yellow background with the tile (Everything is Cascading) and the author (Al Montoro) in big laters, a subtitle below the author (Not a bestselling author of the comiCSS series). The center of the drawing looks like a microscope preview with the text The History and Persistence of the Most Hated Language">
         <img src="/comics/184/184-everything-is-cascading-0.webp" alt="" width="350" />
       </div>
 
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/185" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/184">https://comicss.art/comics/184</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/184/everything-is-cascading.png">https://comicss.art/comics/184/everything-is-cascading.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/184">https://comicss.art/comics/184</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/184/everything-is-cascading.png">https://comicss.art/comics/184/everything-is-cascading.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/184/everything-is-cascading.html" rel="alternate">https://comicss.art/comics/184/everything-is-cascading.html</a></p>
 
       <hr />
@@ -218,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-05-01"></script>
+    <script>let postId = 184;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
