new cartoon: may the fourth 3

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>CSS Alignment</h1>
+      <h1>May the Fourth (III)</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/184" rel="prev">
+        <a href="/comics/185" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/2">
+        <a class="random-post" href="/comics/133">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -139,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="the same snippet of CSS formatted in different ways organized based on the Dungeons and Dragons alignment grid of: good, netrual, and evil; vs lawful, neutral, and chaotic">
-        <img src="/comics/185/185-css-alignment-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon of the CSS logo holding a lightsaber and saying 'I am your father', while the Tailwind logo kneels in despair yelling 'NOOOOOOOOOO!'">
+        <img src="/comics/186/186-may-the-fourth-iii-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/184" rel="prev">
+        <a href="/comics/185" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/9">
+        <a class="random-post" href="/comics/13">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -178,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/185">https://comicss.art/comics/185</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/185/css-alignment.png">https://comicss.art/comics/185/css-alignment.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/185/css-alignment.html" rel="alternate">https://comicss.art/comics/185/css-alignment.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/186">https://comicss.art/comics/186</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/186/may-the-fourth-iii.png">https://comicss.art/comics/186/may-the-fourth-iii.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/186/may-the-fourth-iii.html" rel="alternate">https://comicss.art/comics/186/may-the-fourth-iii.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +219,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-05-01"></script>
+    <script src="/js/data.js?last-updated=2025-05-08"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
