--- a/comics/187/index.html
+++ b/comics/187/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #187: Visited Link</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #187: Visited Link" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/187" />
+    <meta property="og:image" content="https://comicss.art/comics/187/thumb.png" />
+    <meta property="og:description" content="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/187">
+    <meta name="twitter:title" content="comiCSS #187: Visited Link">
+    <meta name="twitter:description" content="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
+    <meta name="twitter:image" content="https://comicss.art/comics/187/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/187" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/188" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
+      <div id="comic-strip" role="img" class="" aria-label="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
         <img src="/comics/187/187-visited-link-0.webp" alt="" width="350" />
         <img src="/comics/187/187-visited-link-1.webp" alt="" width="350" />
         <img src="/comics/187/187-visited-link-2.webp" alt="" width="350" />
@@ -166,7 +166,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/188" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -180,8 +180,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/187">https://comicss.art/comics/187</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/187/visited-link.png">https://comicss.art/comics/187/visited-link.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/187">https://comicss.art/comics/187</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/187/visited-link.png">https://comicss.art/comics/187/visited-link.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/187/visited-link.html" rel="alternate">https://comicss.art/comics/187/visited-link.html</a></p>
 
       <hr />
@@ -220,8 +220,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-05-08"></script>
+    <script>let postId = 187;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
