new cartoon: visited link

--- a/comics/187/index.html
+++ b/comics/187/index.html
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art/comics/187" />
     <meta property="og:image" content="https://comicss.art/comics/187/thumb.png" />
-    <meta property="og:description" content="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'" />
+    <meta property="og:description" content="Cartoon with the CSS and JS logos looking at a visited link. CSS continuously claims it's purple while JS claims it's blue. In the end JS believes CSS and is worried about being colorblind" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://comicss.art/comics/187">
     <meta name="twitter:title" content="comiCSS #187: Visited Link">
-    <meta name="twitter:description" content="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
+    <meta name="twitter:description" content="Cartoon with the CSS and JS logos looking at a visited link. CSS continuously claims it's purple while JS claims it's blue. In the end JS believes CSS and is worried about being colorblind">
     <meta name="twitter:image" content="https://comicss.art/comics/187/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
@@ -139,10 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
+      <div id="comic-strip" role="img" class="vertical" aria-label="Cartoon with the CSS and JS logos looking at a visited link. CSS continuously claims it's purple while JS claims it's blue. In the end JS believes CSS and is worried about being colorblind">
         <img src="/comics/187/187-visited-link-0.webp" alt="" width="350" />
-        <img src="/comics/187/187-visited-link-1.webp" alt="" width="350" />
-        <img src="/comics/187/187-visited-link-2.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
