--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Cartoon with the CSS and JS logos chitchatting, CSS says 'It looks like Zelda visited Link', and a confused JS replies 'How... How can you tell?'">
+      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon with the CSS and JS logos looking at a visited link. CSS continuously claims it's purple while JS claims it's blue. In the end JS believes CSS and is worried about being colorblind">
         <img src="/comics/187/187-visited-link-0.webp" alt="" width="350" />
-        <img src="/comics/187/187-visited-link-1.webp" alt="" width="350" />
-        <img src="/comics/187/187-visited-link-2.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
