--- a/comics/188/index.html
+++ b/comics/188/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #188: The Many Faces of CSS</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #188: The Many Faces of CSS" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/188" />
+    <meta property="og:image" content="https://comicss.art/comics/188/thumb.png" />
+    <meta property="og:description" content="cartoon with CSS saying 'Many complain about how difficult I am, but I want to prove I'm easy and versatile. To show... The Many Faces of CSS (because changing styles is my thing)'. Vanilla: new CSS loapolitan: yellow, brown and pink logo. Dark: logo that looks like batman. Kawaii: cute pinkish logo. 3D: logo with lights and shadows. Halloween: logo wearing a JS costume. Halloween 2: logo wearing a Tailwind mask. Vintage: the old CSS logo. Cubist: new CSS logo with multiple colors and all the letters in different spots" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/188">
+    <meta name="twitter:title" content="comiCSS #188: The Many Faces of CSS">
+    <meta name="twitter:description" content="cartoon with CSS saying 'Many complain about how difficult I am, but I want to prove I'm easy and versatile. To show... The Many Faces of CSS (because changing styles is my thing)'. Vanilla: new CSS loapolitan: yellow, brown and pink logo. Dark: logo that looks like batman. Kawaii: cute pinkish logo. 3D: logo with lights and shadows. Halloween: logo wearing a JS costume. Halloween 2: logo wearing a Tailwind mask. Vintage: the old CSS logo. Cubist: new CSS logo with multiple colors and all the letters in different spots">
+    <meta name="twitter:image" content="https://comicss.art/comics/188/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/188" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/189" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="horizontal" role="img" aria-label="cartoon with CSS saying 'Many complain about how difficult I am, but I want to prove I'm easy and versatile. To show... The Many Faces of CSS (because changing styles is my thing)'. Vanilla: new CSS loapolitan: yellow, brown and pink logo. Dark: logo that looks like batman. Kawaii: cute pinkish logo. 3D: logo with lights and shadows. Halloween: logo wearing a JS costume. Halloween 2: logo wearing a Tailwind mask. Vintage: the old CSS logo. Cubist: new CSS logo with multiple colors and all the letters in different spots">
+      <div id="comic-strip" role="img" class="horizontal" aria-label="cartoon with CSS saying 'Many complain about how difficult I am, but I want to prove I'm easy and versatile. To show... The Many Faces of CSS (because changing styles is my thing)'. Vanilla: new CSS loapolitan: yellow, brown and pink logo. Dark: logo that looks like batman. Kawaii: cute pinkish logo. 3D: logo with lights and shadows. Halloween: logo wearing a JS costume. Halloween 2: logo wearing a Tailwind mask. Vintage: the old CSS logo. Cubist: new CSS logo with multiple colors and all the letters in different spots">
         <img src="/comics/188/188-faces-of-css-0.webp" alt="" width="350" />
         <img src="/comics/188/188-faces-of-css-1.webp" alt="" width="350" />
         <img src="/comics/188/188-faces-of-css-2.webp" alt="" width="350" />
@@ -172,7 +172,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/189" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -186,8 +186,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/188">https://comicss.art/comics/188</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/188/faces-of-css.png">https://comicss.art/comics/188/faces-of-css.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/188">https://comicss.art/comics/188</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/188/faces-of-css.png">https://comicss.art/comics/188/faces-of-css.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/188/faces-of-css.html" rel="alternate">https://comicss.art/comics/188/faces-of-css.html</a></p>
 
       <hr />
@@ -226,8 +226,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-05-25"></script>
+    <script>let postId = 188;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
