--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>AliceBlue</h1>
+      <h1>Kerning the Frog</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -117,7 +117,7 @@
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/2">
+        <a class="random-post" href="/comics/123">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -139,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="The logo of CSS (a purple square with 3 rounded corners) with an angry face saying 'we are going to change the color from aliceblue to just alblue, because fuck ICE!'">
-        <img src="/comics/191/191-aliceblue-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon of a puppet frog saying 'It is not easy being #00800' with poor kerning (the letters are oddly spaced). It has the title (bad) kerning the frog">
+        <img src="/comics/191/191-kerning-the-frog-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -156,7 +156,7 @@
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/20">
+        <a class="random-post" href="/comics/107">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -179,8 +179,8 @@
       </nav>
 
       <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/191">https://comicss.art/comics/191</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/191/aliceblue.png">https://comicss.art/comics/191/aliceblue.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/191/aliceblue.html" rel="alternate">https://comicss.art/comics/191/aliceblue.html</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/191/kerning-the-frog.png">https://comicss.art/comics/191/kerning-the-frog.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/191/kerning-the-frog.html" rel="alternate">https://comicss.art/comics/191/kerning-the-frog.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +219,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-06-12"></script>
+    <script src="/js/data.js?last-updated=2025-06-15"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
