Fix typo in name + add inspiration

--- a/comics/192/css-nightmare.html
+++ b/comics/192/css-nightmare.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-/* Inspired by JK Denton's Dust: https://imgur.com/gallery/dust-LEVuiJM */
+/* Inspired by JK Benton's Dust: https://imgur.com/gallery/dust-LEVuiJM */
 article {
   font-size: 0.75vmin;
   width: 120em;
