--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
     <link rel="canonical" href="https://comicss.art" />
 
