--- a/comics/76/game.html
+++ b/comics/76/game.html
@@ -789,7 +789,7 @@ input[type="reset"] {
   <span class="p">aspect-ratio</span>: <span class="n">1</span>;
 }
 
-<span class="s">.brand</span>::before {
+<span class="s">.brand</span>::after {
   <span class="p">content</span>: <span class="t">"\00a0"</span>;
 }</pre>
       </div>
@@ -933,7 +933,7 @@ input[type="reset"] {
 }</pre>
       </div>
       <div>
-        <input id="brand-19" pattern="(7|[Ss]even)[- ][Ee]leven" aria-labelledby="code-19" required />
+        <input id="brand-19" pattern="(7|[Ss]even)[\- ][Ee]leven" aria-labelledby="code-19" required />
         <output id="correct-19" aria-live="assertive">Correct</output>
         <section>
           <details>
@@ -1077,7 +1077,7 @@ input[type="reset"] {
 }</pre>
       </div>
       <div>
-        <input id="brand-25" pattern="[Tt][- ][Mm]obile" aria-labelledby="code-25" required />
+        <input id="brand-25" pattern="[Tt][\- ][Mm]obile" aria-labelledby="code-25" required />
         <output id="correct-25" aria-live="assertive">Correct</output>
         <section>
           <details>
@@ -1216,7 +1216,7 @@ input[type="reset"] {
 }</pre>
       </div>
       <div>
-        <input id="brand-31" pattern="(7|[Ss]even)[- ][Uu][Pp]" aria-labelledby="code-31" required />
+        <input id="brand-31" pattern="(7|[Ss]even)[\- ][Uu][Pp]" aria-labelledby="code-31" required />
         <output id="correct-31" aria-live="assertive">Correct</output>
         <section>
           <details>
